--- a/app/src/layouts/BaseArabicLayout.astro
+++ b/app/src/layouts/BaseArabicLayout.astro
@@ -3,6 +3,8 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 import {Navbar} from "../components/ui/core/Navbar";
 import Footer from "../components/ui/core/Footer";
 import { getSearchablePosts } from "@lib/posts";
+import Preloader from "@components/ui/preloader";
+import FluidCanvas from "@components/ui/core/scenes/FluidCanvas";
   
 const navItems = [
   {
@@ -26,23 +28,27 @@ const { subTitle } = Astro.props;
 <BaseLayout locale="ar" title={subTitle ? `${subTitle} | مدونة عبد الرحمن الغول` : "مدونة عبد الرحمن الغول"}>
   <slot />
 
-  <Navbar 
-    slot="header"
-    locale="ar" 
-    navItems={navItems}
-    logo="الغول"
-    githubText="المستودع" 
-    searchablePosts={posts}
-    client:only
-  />
+  <body slot="body">
+    <div id="initial-blocker" class="fixed inset-0 z-1 bg-white dark:bg-black"></div>
+    <Preloader client:load>
+      <Navbar 
+        locale="ar" 
+        navItems={navItems}
+        logo="الغول"
+        githubText="المستودع" 
+        searchablePosts={posts}
+        client:only
+      />
 
-  <slot name="body" /> 
-  
-  <Footer
-    slot="footer"
-    locale="ar"
-    authorName="عبد الرحمن الغول"
-    authorRole="مطور و كاتب تقني"
-    description="تم بناءه بواسطة Next.js ونشره على Github"
-  />
+      <slot name="body" /> 
+
+      <Footer
+        locale="ar"
+        authorName="عبد الرحمن الغول"
+        authorRole="مطور و كاتب تقني"
+        description="تم بناءه بواسطة Next.js ونشره على Github"
+      />
+    </Preloader>
+    <FluidCanvas client:load />
+  </body>
 </BaseLayout>
