--- a/app/src/pages/en/posts/[slug].astro
+++ b/app/src/pages/en/posts/[slug].astro
@@ -65,26 +65,24 @@ const tags = await Promise.all(
     <meta property="og:image:alt" content={`An image for the article titled ${post.data.title}`} />
   <meta name="twitter:image:alt" content={`An image for the article titled ${post.data.title}`} />
   : null}
-
-  <div class="min-h-screen" slot="body">
-    <div class="fixed inset-0 -z-10">
-      <SpaceBoyScene client:only />
-    </div>
-
-    <main class="min-h-screen mb-12">
-      <div class="flex lg:gap-8 mt-24 px-4 sm:px-6 lg:px-8">
-        <div class="flex flex-1 gap-4 justify-center min-w-0">
-          <PostWithTOC 
-            locale="en"
-            post={{...post, frontmatter: remarkPluginFrontmatter}}
-            headings={headings}
-            prevPost={prevPost}
-            nextPost={nextPost}
-            client:only>
-            <Content />
-          </PostWithTOC>
-        </div>
-      </div>
-    </main>
+  
+  <div class="fixed inset-0 -z-10">
+    <SpaceBoyScene client:only />
   </div>
+
+  <main class="min-h-screen mb-12" slot="body">
+    <div class="flex lg:gap-8 mt-24 px-4 sm:px-6 lg:px-8">
+      <div class="flex flex-1 gap-4 justify-center min-w-0">
+        <PostWithTOC 
+          locale="en"
+          post={{...post, frontmatter: remarkPluginFrontmatter}}
+          headings={headings}
+          prevPost={prevPost}
+          nextPost={nextPost}
+          client:only>
+          <Content />
+        </PostWithTOC>
+      </div>
+    </div>
+  </main>
 </BaseEnglishLayout>
