feat: add google's verification meta tag

--- a/app/src/layouts/BaseHead.astro
+++ b/app/src/layouts/BaseHead.astro
@@ -24,6 +24,7 @@ const { locale, title } = Astro.props;
   <link rel="alternate" type="application/rss+xml" title="مدونة عبد الرحمن الغول" href="//al-ghoul.github.io/feed.xml" />
   :
   <link rel="alternate" type="application/rss+xml" title="Abdulrahman AlGhoul's Blog" href="https://al-ghoul.github.io/en/feed.xml" />}
+  <meta name="google-site-verification" content="PctrSuhGX5V25m3PvBGETkXtehoL6prlMAsSPWdc8es" />
   <slot />
   <title>{title}</title>
 </head>
