--- a/app/src/pages/index.astro
+++ b/app/src/pages/index.astro
@@ -2,8 +2,7 @@
 import BaseArabicLayout from "@layouts/BaseArabicLayout.astro";
 import SwarmScene from "../components/ui/core/scenes/SwarmScene";
 import { getCollection } from "astro:content";
-import {PostCard} from "../components/ui/posts/PostCard";
-import { generateExcerptFromMarkdown, getCategoryCounts, getTagCounts } from "@lib/posts";
+import { generateExcerptFromMarkdown, getCategoryCounts, getTagCounts, getSeriesCounts } from "@lib/posts";
 import { Sidebar } from "@components/ui/posts/Sidebar";
 import { HeroParallax } from "@components/ui/hero-parallax";
 import { PRODUCTS } from "@lib/data";
@@ -27,6 +26,7 @@ const postsWithExcerpts = await Promise.all(
 
 const categories = await getCategoryCounts();
 const tags = await getTagCounts();
+const series = await getSeriesCounts();
 ---
 <BaseArabicLayout>
   <meta property="og:title" content="مدونة عبد الرحمن الغول" />
@@ -80,7 +80,7 @@ const tags = await getTagCounts();
         </div>
       </div>
 
-      <Sidebar categories={categories} tags={tags} client:load />
+      <Sidebar categories={categories} tags={tags} series={series} client:load />
     </section>
 
     <section>
